XVGDL including game states